<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="gpu_next"
        android:summary="@string/pref_gpu_next_summary"
        android:title="@string/pref_gpu_next_title" />

    <EditTextPreference
        android:key=""
        android:title="@string/pref_edit_mpv_conf"
        android:dialogMessage="@string/pref_edit_mpv_conf_message"
        android:positiveButtonText="@string/dialog_save"
        android:negativeButtonText="@string/dialog_cancel" />

    <EditTextPreference
        android:key=""
        android:title="@string/pref_edit_input_conf"
        android:dialogMessage="@string/pref_edit_input_conf_message"
        android:positiveButtonText="@string/dialog_save"
        android:negativeButtonText="@string/dialog_cancel" />

    <ListPreference
        android:key=""
        android:title="@string/pref_version_info"
        android:negativeButtonText="@null" />

</PreferenceScreen>
